--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "nanoid": "^3.1.23",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
